# Physical-Simulations

./: README.md
lightinterference/: CMakeLists.txt  README.md
lightinterference/lightinterference/: CMakeLists.txt  CompositeWave.cpp  CompositeWave.h  InterferenceExperiment.cpp  InterferenceExperiment.h  PointSource.cpp  PointSource.h  Screen.cpp  Screen.h  SlitSource.cpp  SlitSource.h  Wave.cpp  Wave.h  lightinterference.cpp
